--- a/Frontend/app/themes/default/css/default.css
+++ b/Frontend/app/themes/default/css/default.css
@@ -1,11 +1,13 @@
-#content {
-	padding: 20px;
+.ui.segment.footer {
+	margin-top: 1rem;
+	padding-top: 5em;
+	padding-bottom: 5em;
 }
 
 .ui.dropdown .menu>.divider {
-    border-top: 1px solid rgba(34,36,38,.1);
-    height: 0;
-    margin: 0; 
+  border-top: 1px solid rgba(34,36,38,.1);
+  height: 0;
+  margin: 0;
 }
 
 .card .content .description, p {
